welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:1: error: not found: value *
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {*
                                                      ^posNeg:5: error: type mismatch;
 found   : Unit
 required: Boolean
if (  (( a>0 && b<0 ) || ( a<0 && b>0))) {
^